# mollie-api-python

./: .flake8  .git-blame-ignore-revs  .gitignore  .travis.yml  DEVELOPMENT.md  MANIFEST  MANIFEST.in  Makefile  Pipfile  README.md  README.mdown  mypy.ini  pyproject.toml  pytest.ini  refactoring_v2_client_api.md  release.sh  release_process.md  setup.cfg  setup.py  test_requirements.txt  v3-api-changes.md
Mollie/: __init__.py
examples/: 01-new-payment-using-qrcode.py  01-new-payment.py  02-webhook-verification.py  03-return-page.py  04-ideal-payment.py  05-payments-history.py  06-list-activated-methods.py  07-new-customer.py  08-list-customers.py  09-create-customer-payment.py  1-new-payment.py  10-customer-payment-history.py  11-refund-payment.py  12-new-order.py  13-handle-order-status-change.py  13-order-webhook-verification.py  14-cancel-order.py  15-list-orders.py  16-cancel-order-line.py  17-order-return-page.py  17-ship-order-completely.py  18-ship-order-completely.py  19-ship-order-partially.py  2-webhook-verification.py  20-get-shipment.py  20-list-order-shipments.py  21-list-order-shipments.py  21-refund-order-completely.py  22-refund-order-completely.py  22-update-shipment-tracking.py  23-update-shipment-tracking.py  3-return-page.py  4-ideal-payment.py  5-payments-history.py  6-list-activated-methods.py  7-new-customer.py  8-list-customers.py  9-create-customer-payment.py  app.py
mollie/: __init__.py
tests/: conftest.py  test_api_client.py  test_balances.py  test_bogus.py  test_captures.py  test_chargebacks.py  test_client.py  test_client_links.py  (+40 more)
(+264 files in other folders)
