[metadata]
description-file = README.mdown

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
    --cov mollie/
    --no-cov-on-fail
    --cov-fail-under=80

[pycodestyle]
max-line-length = 119
exclude=.eggs

[isort]
known_third_party = flask, pytest, requests, responses
multi_line_output = 3
skip=.eggs
